Changing certificate metadata with test data